--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid d-flex justify-content-between">
-            <a class="navbar-brand" href="/">KinoMOOD</a>
+            <a class="navbar-brand" href="/">BookMOOD</a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
