--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,9 @@
 <p id="result"></p>
 
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-
+{% if message %}
+<div class="alert alert-info text-center">{{ message }}</div>
+{% endif %}
 <h1> Выбери своё настроение — найди идеальную книгу! </h1>
 <p class="h1"> Как ты себя чувствуешь? </p>
 <div class="container py-5">
