--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,15 @@
 </header>
 <!-- Begin page content -->
 <main role="main" class="container">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }} text-center mt-3" role="alert">
+        {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
 </main>
 </body>
