--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,6 +33,7 @@
     <div class="d-flex justify-content-center gap-3 mt-4">
         <a href="{{ url_for('favourites_books') }}" class="btn btn-outline-primary">📚 Избранное</a>
         <a href="{{ url_for('logout') }}" class="btn btn-outline-danger">🚪 Выйти</a>
+        <a href="{{ url_for('history') }}" class="btn btn-outline-secondary">📖 История книг</a>
     </div>
 </div>
 {% endblock %}
