--- a/templates/favourites_books.html
+++ b/templates/favourites_books.html
@@ -15,7 +15,7 @@
     {% if books %}
         <form method="get" class="mb-3">
         <select name="sort_by" onchange="this.form.submit()" class="form-select">
-            <option value="title" {% if request.args.get('sort_by') == 'title' %}selected{% endif %}По названию</option>
+            <option value="title" {% if request.args.get('sort_by') == 'title' %}selected{% endif %}>По названию</option>
             <option value="author" {% if request.args.get('sort_by') == 'author' %}selected{% endif %}>По автору</option>
             <option value="overview" {% if request.args.get('sort_by') == 'overview' %}selected{% endif %}>По оценке</option>
         </select>
